# config-sheet-forge

./: .gitattributes  .gitignore  ConfigSheetForge.sln  Directory.Build.props  LICENSE  NOTICE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: provider.yml  task.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css  workflow.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/tests/: ui-smoke.mjs  workflow.test.ts
docs/: ci-gate.md  configuration.md  desktop-workbench.md  getting-started.md  human-guide.md  merge-policy.md  portable-subset.md  unity-window.md
docs/project/: github-setup.md  launch-quality-goal.md  milestones.md
docs/providers/: lark.md
docs/releases/: v0.1.0-draft.md  v0.1.1.md  v0.2.0.md
examples/minimal-unity/: README.md  items.semantic.json  registry.example.json
harness/: README.md
harness/requirements-change/: change-log.md  template.md
harness/task-complete/: completion-report.md  template.md
harness/task-start/: current-task-plan.md  template.md
scripts/: Check-NoPrivateContent.ps1  Package-DesktopRelease.ps1  Run-CI.ps1  Validate-UnityPackage.ps1
src/cli/: README.md
src/cli/ConfigSheetForge.Cli/: ConfigSheetForge.Cli.csproj  Program.cs
src/core/: README.md
src/core/ConfigSheetForge.Core/: ConfigSheetForge.Core.csproj
src/providers/lark/: README.md
tests/ConfigSheetForge.Tests/: ConfigSheetForge.Tests.csproj  Program.cs
(+3 files in other folders)
