[package]
name = "config-sheet-forge-desktop"
version = "0.4.43"
description = "Official Config Sheet Forge desktop workbench"
authors = ["Config Sheet Forge contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
